--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>&nbsp;Prem's Portfolio Terminal</title>
     <meta name="description" content="My secret terminal portfolio. You shouldn't be reading this."/>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
 
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"/>
     <link rel="stylesheet" href="./src/styles.css" />
